# Armmed_Control

./: README.md
arm_control/: CMakeLists.txt  arm_controller_plugins.xml  package.xml
arm_control/config/: arm_controller.yaml  arm_slq_config.yaml
arm_control/include/ocs2_mobile_manipulator/: ArmController.h  CubicSplineTrajectory.h  ManipulatorModelInfo.h  MobileManipulatorInterface.h  SineReferenceManager.h
arm_control/launch/: arm_control.launch  multi_arm_control.launch
arm_control/src/: ArmController.cpp  FactoryFunctions.cpp  MobileManipulatorInterface.cpp  MobileManipulatorPinocchioMapping.cpp  SineReferenceManager.cpp
arm_description/launch/: test_lbr_iiwa_14_r820.launch
arm_description/urdf/: lbr_iiwa_14_r820.urdf  lbr_iiwa_14_r820.xacro  lbr_iiwa_14_r820_macro.xacro
arm_gazebo/launch/: arm_world.launch
